@@ -19,6 +19,7 @@ set(scripts_STAT_SRCS
   Northrend/Ulduar/HallsOfLightning/boss_ionar.cpp
   Northrend/Ulduar/HallsOfLightning/boss_volkhan.cpp
   Northrend/Ulduar/HallsOfLightning/boss_loken.cpp
+  Northrend/Ulduar/HallsOfLightning/halls_of_lightning.cpp
   Northrend/Ulduar/Ulduar/boss_general_vezax.cpp
   Northrend/Ulduar/Ulduar/ulduar_teleporter.cpp
   Northrend/Ulduar/Ulduar/boss_thorim.cpp
